--- a/Public/user-room.css
+++ b/Public/user-room.css
@@ -26,3 +26,17 @@
     font-weight: 700;
     text-transform: uppercase;
 }
+.door-close{
+    background-image: url('/Public/door-closed.png');
+    background-repeat: no-repeat;
+    background-position: 50%;
+    width: 100%;
+    height: 5rem;
+}
+.door-open{
+    background-image: url('/Public/door-opened.png');
+    background-repeat: no-repeat;
+    background-position: 50%;
+    width: 100%;
+    height: 5rem;
+}
