--- a/Public/home.css
+++ b/Public/home.css
@@ -43,18 +43,39 @@ body {
   height: 1.5rem;
   border-bottom: 1px solid rgb(7, 30, 62);
   border-right:1px solid rgb(7, 30, 62);
-  transform: rotate(45deg);
-  animation: scroll-down;
-  animation-timing-function: linear;
-  animation-duration: 1.5s;
-  animation-iteration-count: infinite;
 }
-@keyframes scroll-down {
+#table-relavtive{
+  position: relative;
+}
+#table-loader{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgb(228, 233, 233);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#table-loader>.waiting{
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  border-top: 4px solid transparent;
+  border-left: 4px solid black;
+  border-right: 4px solid black;
+  border-bottom: 4px solid black;
+  animation: loader;
+  animation-timing-function:cubic-bezier(0.895, 0.03, 0.685, 0.22);
+  animation-duration: .5s;
+  animation-iteration-count: infinite;
+  transform: rotate(0deg);
+}
+@keyframes loader {
   0%{
-    margin-top: 0rem;
-  }50%{
-    margin-top: 1.5rem;
+    transform: rotate(0deg);
   }100%{
-    margin-top: 0rem;
+    transform: rotate(360deg);
   }
 }
