--- a/Public/signup.css
+++ b/Public/signup.css
@@ -12,4 +12,8 @@ body {
   color: rgb(7, 30, 62);
   font-family: "Belleza", sans-serif;
   font-weight: 800;
+  text-decoration: none;
+}
+.sign-header:hover{
+  color: rgb(83, 83, 195);
 }
